--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,9 +2,10 @@
   "name": "utils",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./lib/index.js",
+  "module": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "rollup -c"
   },
   "keywords": [],
   "author": "",
